@@ -114,19 +114,6 @@ Description: Vi IMproved - enhanced vi editor
  version of Vim.  See the other vim-* packages if you need more
  (or less).
 
-Package: vim-dbg
-Section: debug
-Priority: extra
-Architecture: any
-Depends: vim (= ${binary:Version}) | vim-gtk (= ${binary:Version}) |
- vim-gnome (= ${binary:Version}) | vim-nox (= ${binary:Version}) |
- vim-common (= ${binary:Version}) | vim-athena (= ${binary:Version}) |
- vim-tiny (= ${binary:Version}), ${misc:Depends}
-Description: Vi IMproved - enhanced vi editor (debugging symbols)
- Vim is an almost compatible version of the UNIX editor Vi.
- .
- This package contains gdb debugging symbols for the vim packages.
-
 Package: vim-gtk
 Priority: extra
 Architecture: any
