@@ -19,6 +19,7 @@ vim (2:7.4.1683-1) UNRELEASED; urgency=medium
   * Improve reproducibility of Vim builds.  (Closes: #787327)
     + Use $SOURCE_DATE_EPOCH to set the compilation time displayed in :version
     + Set a static value for configure's --with-compiledby argument
+  * Migrate to automatic -dbgsym packages
 
  -- James McCoy <jamessan@debian.org>  Mon, 28 Mar 2016 21:14:49 -0400
 
